--- a/dx12.md
+++ b/dx12.md
@@ -82,9 +82,10 @@ cpu修改创建，用来保存和提交descriptor。
 
 ### Graphic Pipeline State
 
-#### The direct3d 12 Graphic Pipeline
+#### The Direct3d 12 Pipelines
 
 ![The graphic pipeline of ms d3d12](https://msdn.microsoft.com/dynimg/IC839519.png)
+![The compute pipeline of ms d3d12](https://msdn.microsoft.com/dynimg/IC839520.png)
 
 ### 相关文档索引：
 
