--- a/dx12.md
+++ b/dx12.md
@@ -85,6 +85,7 @@ cpu修改创建，用来保存和提交descriptor。
 #### The Direct3d 12 Pipelines
 
 ![The graphic pipeline of ms d3d12](https://msdn.microsoft.com/dynimg/IC839519.png)
+![The graphic pipeline of ms d3d11. It is working both in d3d11 and d3d12 rendering stage.](https://msdn.microsoft.com/dynimg/IC340510.jpg)
 ![The compute pipeline of ms d3d12](https://msdn.microsoft.com/dynimg/IC839520.png)
 
 ### 相关文档索引：
