--- a/dx12.md
+++ b/dx12.md
@@ -4,8 +4,8 @@
 
 dx12由于开放了更底层的硬件接口，使开发者可以完全控制计算任务什么时候提交到gpu，因而在使用上比起之前的接口有两改进：
 
-1. 没有硬件接口的直接抽象，因此可以使用多线程handle多个抽象。
-2. 单一过程可以重用。
+1. 没有单一的immidiate context，因此可以使用多线程handle多个context。
+2. 设置好的一次渲染过程可以重复使用。
 
 dx12的设计，使cpu/gpu之间更像client/server之间的关系。cpu在本地分配堆存储数据，通过api允许的接口申请gpu管辖的内存，通过公用数据结构的形式上传cpu保持的数据和代码到gpu，再由gpu计算渲染结果返回公用内存，最后通过一套输出接口（dxgi）输出到显示器。同时cpu也可以访问计算后的结果。
 dx12的内存模型，也更加接近于由开发者申请提交，cpu填充，开发者调度使用，一改以往完全由后台调度的策略。开发者需要为正确的使用和调用内存对象做更多工作，同时也能因此获得更高的app执行效率。这之间的关系就好比是c# gc和cpp alloc。
