--- a/dx12.md
+++ b/dx12.md
@@ -84,7 +84,21 @@ cpu修改创建，用来保存和提交descriptor。
 
 #### The Direct3d 12 Pipelines
 
-![The render pipeline of ms d3d11 or higher](https://zardlee1937.github.io/img/pipeline.png)
+![The render pipeline of ms d3d11 or higher](https://zardlee1937.github.io/img/pipeline.png "Dx12 render pipeline")
+
+在说明d3d12 pipeline之前，首先描述一下dx11的render pipeline。本质上，dx12的pipeline是针对该版本的扩展。/br
+
+d3d11 pipeline大体分为以下阶段：
+
+1. Input Assmebler
+2. Vertex Shader
+3. Hull Shader
+4. Tesselator
+5. Domain Shader
+6. Geometry Shader
+7. Rasterizer
+8. Pixel Shader
+9. Output Merge
 
 ### 相关文档索引：
 
