--- a/dx12.md
+++ b/dx12.md
@@ -84,23 +84,37 @@ cpu修改创建，用来保存和提交descriptor。
 
 #### The Direct3d 12 Pipelines
 
-![The render pipeline of ms d3d11 or higher](https://zardlee1937.github.io/img/pipeline.png "Dx12 render pipeline")
+![The render pipeline of ms d3d11 or higher](https://zardlee1937.github.io/img/pipeline.png "The render pipeline of ms d3d11 or higher")
 
 在说明d3d12 pipeline之前，首先描述一下dx11的render pipeline。本质上，dx12的pipeline是针对该版本的扩展。/br
 
 d3d11 pipeline大体分为以下阶段：
 
 1. Input Assmebler
+    * 使用primitive type组织primitive data，提供其他阶段使用。
+    * 链接系统默认值以便帮助shader更加有效的执行。
 2. Vertex Shader
-3. Hull Shader
-4. Tesselator
-5. Domain Shader
-6. Geometry Shader
-7. Rasterizer
-8. Pixel Shader
-9. Output Merge
+    * 处理从IA阶段传入的顶点数据。
+    * 每个顶点产生一次数据，计算并产生一次输出传给下个阶段。（理论上有毒少个顶点就会有多少次Vertex Shader调用
+    * VS一次最大允许16个32位浮点数的传入和传出。
+    * VS必须存在并且必须传出一个值。
+3. Tesselator
+    * 实际用来需分区面，在早期管线中，这部分由cpu实现。现在将它移动到gpu。
+    * Tesselator做的事，实在顶点和面数较小的图元上，通过计算增加顶点和面数，并传给下个阶段。
+    * Tesselator阶段的意义在于，可以减少数据的输入和上载数量，但必然的会消耗gpu运算效率。
+    * Tesselator阶段一般由硬件实现，它有两个子的可编程阶段
+        1. Hull shader
+            * 每次补充计算调用一次。它将那些定义低细节曲面的控制点，转换成补充的控制点。大多数情况下，是将一个面上的若干个顶点，扩展成很多个，如下图：/br
+            ![Hull shader calculate paths](https://zardlee1937.github.io/img/hull-tesselate.png "Calculate Path")
+        2. Domain shader
+
+4. Geometry Shader
+5. Rasterizer
+6. Pixel Shader
+7. Output Merge
 
 ### 相关文档索引：
 
 * [Work Submission through Commands]("https://msdn.microsoft.com/en-us/library/windows/desktop/dn859354(v=vs.85).aspx")
 * [Descriptor Heap]("https://msdn.microsoft.com/en-us/library/windows/desktop/mt709128(v=vs.85).aspx")
+* [Semantics]("https://msdn.microsoft.com/en-us/library/windows/desktop/bb509647(v=vs.85).aspx#System_Value")
